--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,8 @@
                 "run",
                 "--no-debugger",
                 "--no-reload",
-                "--port", "5001"
+                "--host", "0.0.0.0",
+                "--port", "5000"
             ],
             "jinja": true
         }
