--- a/wsgi.ini
+++ b/wsgi.ini
@@ -1,7 +1,8 @@
 [uwsgi]
-socket = 0.0.0.0:5000
+socket = :611
 wsgi-file = run.py
 processes = 4
 threads = 2
 callable = app
-stats = 127.0.0.1:9191
+stats = :9191
+
