--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
 version: "3.7"
-
 services:
 
   nautilus:
     build: .
     restart: always
+
+  nginx:
+    image: nginx
+    depends_on:
+      - nautilus
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
-      - 611:5000
+      - 80:80
+      - 443:443
 
   mongo:
     image: mongo
