--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,15 @@
 events {
-    
+
 }
 http {
     server {
         listen 80;
+        listen [::]:80;
+
         server_name localhost;
 
         location / {
             proxy_pass http://nautilus:5000/;
-            proxy_set_header Host "localhost";
         }
     }
 }
