--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,16 @@ services:
       - 80:80
       - 443:443
 
+  letsencrypt:
+    image: linuxserver/letsencrypt
+    environment:
+      - URL=lepto.tech
+      - SUBDOMAINS=nautilus
+      - ONLY_SUBDOMAINS=true
+    volumes:
+      - ./data/config:/config
+    restart: unless-stopped
+
   mongo:
     image: mongo
     restart: always
