--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http {
         listen 80;
         listen [::]:80;
 
-        server_name localhost;
+        server_name nautilus.lepto.tech;
 
         location / {
             proxy_pass http://nautilus:5000/;
