--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,15 @@
-server {
-    listen 80;
-    listen [::]:80;
+events {
 
-    server_name nautilus.lepto.tech;
+}
+http {
+    server {
+        listen 80;
+        listen [::]:80;
 
-    location / {
-        proxy_pass http://nautilus:5000/;
+        server_name nautilus.lepto.tech;
+
+        location / {
+            proxy_pass http://nautilus:5000/;
+        }
     }
 }
