Update root directory to redirect to github pages

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,10 @@ server {
     server_name nautilus.lepto.tech;
 
     location / {
-        proxy_pass http://nautilus:5000/;
+        return 301 https://leptoflare.github.io/nautilus-chambers;
+    }
+
+    location /graphql {
+        proxy_pass http://nautilus:5000/graphql;
     }
 }
